[package]
name = "twilio_rust"
version = "0.1.0"
authors = ["Ameya Lokare <lokare.ameya@gmail.com>"]

[dependencies]
hyper = "0.11"
hyper-tls = "0.1.2"
futures = "0.1"
tokio-core = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "1.5.1"
